--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 1.5.0
 repository: https://github.com/gokberkbar/locale_plus
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
-  flutter: ">=2.5.0"
+  sdk: ">=3.4.0 <4.0.0"
+  flutter: "3.22.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.0
+  intl: ^0.19.0
   plugin_platform_interface: ^2.0.2
   universal_io: ^2.0.4
 
